[package]
name = "cs257-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = "0.12"
lazy_static = "1.4"
rand = "0.8.5"
rand_xorshift = "0.3.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
